src/objects/CM_Provider_Tax_Id__c.object
<CustomObject>
    <description>Provider Tax Identification Object  shows how and where billing is done.</description>
    <fields>
        <fullName>CM_Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_PTI_Prov_Id_End_Date__c</fullName>
        <label>Tax End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_PTI_Prov_Id_Start_Date__c</fullName>
        <label>Tax Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_PTI_Prov_Name_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Tax Identifications</relationshipLabel>
        <relationshipName>Provider_Tax_Identifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_PTI_Prov_Name_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliated To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Tax Identifications</relationshipLabel>
        <relationshipName>Provider_Tax_Identifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_PTI_Tax_Id__c</fullName>
        <externalId>true</externalId>
        <label>Tax Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_PTI_Tax_Shared_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Shared Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_PTI_Tax_Type__c</fullName>
        <label>Tax Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Provider Tax Identification</label>
    <nameField>
        <displayFormat>PTI-{0}</displayFormat>
        <label>Prov Tax Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Tax Identifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>